# virtualify

./: README.md  pyproject.toml
virtualify/: .env.sample  __init__.py  app.py
virtualify/static/: particles.json
virtualify/templates/: index.html  story.html
virtualify/utils/: dalle.py  gpt.py  prompt.py  t2s.py
