[tool.poetry]
name = "virtualify"
version = "0.1.0"
description = ""
authors = ["Abhijna Raghavendra <a_raghavendra@ma.iitr.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.1"}
clarifai = "^10.0.1"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
